--- a/index.html
+++ b/index.html
@@ -83,27 +83,34 @@
             </div>
             <div id="header-emptyTop"></div>
             <div id="header_inner">
-                <div id="header_headlineWrapper">
-                    <h1>Physiotherapie<br>Weber</h1>
-                    <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</h3>
+                <div id="header_headlineWrapper" class="fromBottomWrapper">
+                    <h1 class="moveTop">Physiotherapie<br>Weber</h1>
+                    <h3 class="moveTop">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</h3>
                 </div>
                 <div class="information">
                     <div class="phone"><i class="fa-solid fa-mobile-screen-button"></i>Tel. 01948 97873</div>
                     <div class="address"><i class="fa-solid fa-location-dot"></i>Crayenbühlstraße 1a, Bolanden-Weierhof</div>
                 </div>
             </div>
-            <div class="headerContactWrapper">
+
+
+
+
+
+            <!-- <div class="headerContactWrapper">
                 <div class="headerContact">
                     <div class="headerContactHeadline">Telefon</div>
                     <div class="headerContactContent">063022269</div>
                 </div>
+                <div class="cutter"></div>
                 <div class="headerContact">
                     <div class="headerContactHeadline">Adresse</div>
                     <div class="headerContactContent">Crayenbühlstraße 1a</div>
                     <div class="headerContactContent">67295 Bolanden-Weierhof</div>
                 </div>
+                <div class="cutter"></div>
                 <div class="headerContact">Adresse</div>
-            </div>
+            </div>-->
         </div>
     </div>
 
@@ -111,52 +118,61 @@
         <section id="firstSection">
             <div class="firstSection-overlay"></div>
             <div class="firstSection_inner">
-                <div class="sectionLeft">
+                <div class="sectionLeft fromBottomWrapper">
                     <h5>Was ist Physiotherapie?</h5>
                     <div class="text">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
                 </div>
                 <div class="sectionRight">
-                    <img src="src/4.png" height="100%">
+                    <img class="rotateOpacitySel" src="src/4.png" height="100%">
                 </div>
             </div>
         </section>
-        <section id="secondSection">
-            <div class="secondSection-overlay moveUpRevealOverlay">
-                <!--<div class="aboutMeTextBox fromBottomWrapper">
-                    <h4>Über mich</h4>
-                    <h5>Heilpraktiker für<br>Physiotherapie</h5>
-                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
-                    <button type="button" class="cta-button">MEHR ERFAHREN</button>
-                </div> -->
-            </div>
-            <!-- <div class="firstSection-overlay"></div> -->
-            <div class="secondSection_inner">
-                <div class="aboutMeWrapper">
-                    <div class="aboutMeTextBox">
-                        <h4>Über mich</h4>
-                        <h5>Heilpraktiker für<br>Physiotherapie</h5>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
-                        <button type="button" class="cta-button">MEHR ERFAHREN</button>
-                    </div>
-                    <div class="aboutMeImageBox">
-                        <div class="aboutMeImageBox-image1">
-                            <div class="imagerino1"></div>
-                        </div>
-                        <div class="aboutMeImageBox-image2">
-                            <img src="src/aboutMe.jpg">
-                        </div>
-                        <div class="aboutMeImageBox-image3">
-                            <img src="src/training2.jpg">
-                        </div>
-                        <div class="aboutMeImageBox-image4">
-                            <img src="src/logo.png">
-                        </div>
-                    </div>
 
+        <div class="yPhysioWrapper opacityReveal">
+            <div class="yPhysioHeader">
+                Wieso Physiotherapie?
+            </div>
+            <div class="yPhysioInner">
+                <div class="yPhysio">
+                    <div class="headlineWrapper">
+                        <div class="headline">Schmerzlinderung</div>
+                    </div>
+                    <div class="yPhysioContent">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                    <div class="absoluteBox borderRevealWrapper">
+                        <div class="lineTop borderLines"></div>
+                        <div class="lineRight borderLines"></div>
+                        <div class="lineLeft borderLines"></div>
+                        <div class="lineBottom borderLines"></div>
+                    </div>
+                </div>
+                <div class="yPhysio">
+                    <div class="headlineWrapper">
+                        <div class="headline">Verbesserung der<br>Mobilität</div>
+                    </div>
+                    <div class="yPhysioContent">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                    <div class="absoluteBox borderRevealWrapper">
+                        <div class="lineTop borderLines"></div>
+                        <div class="lineRight borderLines"></div>
+                        <div class="lineLeft borderLines"></div>
+                        <div class="lineBottom borderLines"></div>
+                    </div>
+                </div>
+                <div class="yPhysio">
+                    <div class="headlineWrapper">
+                        <div class="headline">Rehabilitation nach<br>Verletzungen</div>
+                    </div>
+                    <div class="yPhysioContent">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                    <div class="absoluteBox borderRevealWrapper">
+                        <div class="lineTop borderLines"></div>
+                        <div class="lineRight borderLines"></div>
+                        <div class="lineLeft borderLines"></div>
+                        <div class="lineBottom borderLines"></div>
+                    </div>
                 </div>
             </div>
-        </section>
-        <section id="testSection">
+        </div>
+
+        <section id="testSection" class="opacityReveal">
             <div class="testSection_inner">
                 <h5>Unsere Leistungen</h5>
                 <div class="testSection_subWrapper">
@@ -201,6 +217,40 @@
                 </div>
             </div>
         </section>
+        <section id="secondSection">
+            <div class="secondSection-overlay moveUpRevealOverlay">
+                <!--<div class="aboutMeTextBox fromBottomWrapper">
+                    <h4>Über mich</h4>
+                    <h5>Heilpraktiker für<br>Physiotherapie</h5>
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
+                    <button type="button" class="cta-button">MEHR ERFAHREN</button>
+                </div> -->
+            </div>
+            <!-- <div class="firstSection-overlay"></div> -->
+            <div class="secondSection_inner">
+                <div class="aboutMeWrapper">
+                    <div class="aboutMeTextBox">
+                        <h4>Über mich</h4>
+                        <h5>Heilpraktiker für<br>Physiotherapie</h5>
+                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
+                        <button type="button" class="cta-button">MEHR ERFAHREN</button>
+                    </div>
+                    <div class="aboutMeImageBoxWrapper fromBottomWrapper">
+                        <div class="aboutMeImageBox">
+                            <div class="aboutMeImageBox-first imi"></div>
+                            <div class="aboutMeImageBox-second imi"></div>
+                        </div>
+                        <div class="aboutMeImageBox">
+                            <div class="aboutMeImageBox-third imi"></div>
+                            <div class="aboutMeImageBox-fourth imi"></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
         <section id="thirdSection">
             <div class="thirdSection_inner">
                 <h4>Die Praxis</h4>
