--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
         </section>
 
-        <!-- <div class="yPhysioWrapper opacityReveal">
+        <div class="yPhysioWrapper">
             <div class="yPhysioHeader">
                 Wieso Physiotherapie?
             </div>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <section id="testSection" class="opacityReveal">
             <div class="testSection_inner">
