--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <section id="firstSection">
             <div class="firstSection-overlay"></div>
             <div class="firstSection_inner">
-                <div class="sectionLeft fromBottomWrapper">
-                    <h5>Was ist Physiotherapie?</h5>
-                    <div class="text">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
+                <div class="sectionLeft">
+                    <h5 class="moveUpRevealOverlay">Was ist Physiotherapie?</h5>
+                    <div class="text moveUpRevealOverlay">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
                 </div>
                 <div class="sectionRight">
                     <img class="rotateOpacitySel" src="src/4.png" height="100%">
