--- a/index.html
+++ b/index.html
@@ -119,19 +119,32 @@
             <div class="firstSection-overlay"></div>
             <div class="firstSection_inner">
                 <div class="sectionLeft">
-                    <h5 class="moveUpRevealOverlay">Was ist Physiotherapie?</h5>
-                    <div class="text moveUpRevealOverlay">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
+                    <h5>Was ist Physiotherapie?</h5>
+                    <div class="text">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
                 </div>
                 <div class="sectionRight">
                     <img class="rotateOpacitySel" src="src/4.png" height="100%">
                 </div>
             </div>
         </section>
-
-        <div class="yPhysioWrapper">
-            <div class="yPhysioHeader">
-                Wieso Physiotherapie?
+        <section id="thirdSection">
+            <div class="thirdSection_inner">
+                <h4>Die Praxis</h4>
+                <div class="thirdSection_grid">
+                    <div class="grid-item1">1</div>
+                    <div class="grid-item2">
+                        <div class="gridtext">
+                            Physiotherapie <br>Weber
+                        </div>
+                    </div>
+                    <div class="grid-item3">3</div>
+                    <div class="grid-item4">4</div>
+                </div>
             </div>
+        </section>
+        <div class="yPhysioWrapper">
+            <div class="yPhysioHeader">Wieso Physiotherapie?</div>
+            <div class="text">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
             <div class="yPhysioInner">
                 <div class="yPhysio">
                     <div class="headlineWrapper">
