--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
                         <div class="hamburgerMenuLine"></div>
                     </button>
                 </div>
+                <div class="navigationBarBelow">
+                    <div class="navigationBarBelow_inner">
+                        <div id="navigationBar_menu">
+                            <div id="navigationBar_menuItem">PRAXIS</div>
+                            <div id="navigationBar_menuItem">ÜBER MICH</div>
+                            <div id="navigationBar_menuItem">LEISTUNGEN</div>
+                            <div id="navigationBar_menuItem">KONTAKT</div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="header-emptyTop"></div>
             <div id="header_inner">
@@ -143,12 +153,12 @@
             </div>
         </section>
         <div class="yPhysioWrapper">
-            <div class="yPhysioHeader">Wieso Physiotherapie?</div>
+            <div class="yPhysioHeader moveDown">Wieso Physiotherapie?</div>
             <div class="text">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
             <div class="yPhysioInner">
                 <div class="yPhysio">
                     <div class="headlineWrapper">
-                        <div class="headline">Schmerzlinderung</div>
+                        <div class="headline moveDown">Schmerzlinderung</div>
                     </div>
                     <div class="yPhysioContent">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     <div class="absoluteBox borderRevealWrapper">
@@ -189,7 +199,7 @@
             <div class="testSection_inner">
                 <h5>Unsere Leistungen</h5>
                 <div class="testSection_subWrapper">
-                    <div class="testSection_sub">
+                    <div class="testSection_sub moveDown">
                         <div class="testSection_subPicSection">
                             <div class="testSection_subPic">
                                 <i class="fa-solid fa-staff-snake"></i>
@@ -201,7 +211,7 @@
                             <div class="description">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
                         </div>
                     </div>
-                    <div class="testSection_sub">
+                    <div class="testSection_sub moveDown">
                         <div class="testSection_subPicSection">
                             <div class="testSection_subPic">
                                 <i class="fa-solid fa-handshake-angle"></i>
@@ -213,7 +223,7 @@
                             <div class="description">im Bereich Schmerzpsychologie und Wahrnehmung</div>
                         </div>
                     </div>
-                    <div class="testSection_sub">
+                    <div class="testSection_sub moveDown">
                         <div class="testSection_subPicSection">
                             <div class="testSection_subPic">
                                 <i class="fa-solid fa-dumbbell"></i>
@@ -231,7 +241,7 @@
             </div>
         </section>
         <section id="secondSection">
-            <div class="secondSection-overlay moveUpRevealOverlay">
+            <div class="secondSection-overlay moveDownRevealOverlay">
                 <!--<div class="aboutMeTextBox fromBottomWrapper">
                     <h4>Über mich</h4>
                     <h5>Heilpraktiker für<br>Physiotherapie</h5>
