--- a/index.html
+++ b/index.html
@@ -68,11 +68,35 @@
                             <div class="navigationBar_logoTextItem2">Praxis Weber</div>
                         </div>
                     </div>
+                    <!--
                     <div id="navigationBar_menu">
                         <div id="navigationBar_menuItem">PRAXIS</div>
                         <div id="navigationBar_menuItem">ÜBER MICH</div>
                         <div id="navigationBar_menuItem">LEISTUNGEN</div>
                         <div id="navigationBar_menuItem">KONTAKT</div>
+                    </div>-->
+                    <div class="addressBarWrapper">
+                        <div class="addressBarItem">
+                            <div class="addressBarItem_img"><i class="fa-solid fa-location-dot"></i></div>
+                            <div class="addressBarItem_textWrapper">
+                                <div class="adressBarItem_text">Crayenbühlstraße 1a</div>
+                                <div class="adressBarItem_text">67295 Bolanden-Weierhof</div>
+                            </div>
+                        </div>
+                        <div class="addressBarItem">
+                            <div class="addressBarItem_img"><i class="fa-solid fa-location-dot"></i></div>
+                            <div class="addressBarItem_textWrapper">
+                                <div class="adressBarItem_text">Crayenbühlstraße 1a</div>
+                                <div class="adressBarItem_text">67295 Bolanden-Weierhof</div>
+                            </div>
+                        </div>
+                        <div class="addressBarItem">
+                            <div class="addressBarItem_img"><i class="fa-solid fa-location-dot"></i></div>
+                            <div class="addressBarItem_textWrapper">
+                                <div class="adressBarItem_text">Crayenbühlstraße 1a</div>
+                                <div class="adressBarItem_text">67295 Bolanden-Weierhof</div>
+                            </div>
+                        </div>
                     </div>
                     <button class="hamburgerMenu">
                         <div class="hamburgerMenuLine"></div>
@@ -83,10 +107,15 @@
                 <div class="navigationBarBelow">
                     <div class="navigationBarBelow_inner">
                         <div id="navigationBar_menu">
-                            <div id="navigationBar_menuItem">PRAXIS</div>
+                            <div id="navigationBar_menuItem" class="used">HOME</div>
                             <div id="navigationBar_menuItem">ÜBER MICH</div>
                             <div id="navigationBar_menuItem">LEISTUNGEN</div>
                             <div id="navigationBar_menuItem">KONTAKT</div>
+                        </div>
+                        <div class="navigationBarBelow_social">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-whatsapp"></i>
                         </div>
                     </div>
                 </div>
@@ -137,24 +166,9 @@
                 </div>
             </div>
         </section>
-        <section id="thirdSection">
-            <div class="thirdSection_inner">
-                <h4>Die Praxis</h4>
-                <div class="thirdSection_grid">
-                    <div class="grid-item1">1</div>
-                    <div class="grid-item2">
-                        <div class="gridtext">
-                            Physiotherapie <br>Weber
-                        </div>
-                    </div>
-                    <div class="grid-item3">3</div>
-                    <div class="grid-item4">4</div>
-                </div>
-            </div>
-        </section>
         <div class="yPhysioWrapper">
             <div class="yPhysioHeader moveDown">Wieso Physiotherapie?</div>
-            <div class="text">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
+            <div class="text moveDown">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
             <div class="yPhysioInner">
                 <div class="yPhysio">
                     <div class="headlineWrapper">
@@ -195,11 +209,11 @@
             </div>
         </div>
 
-        <section id="testSection" class="opacityReveal">
+        <section id="testSection">
             <div class="testSection_inner">
                 <h5>Unsere Leistungen</h5>
                 <div class="testSection_subWrapper">
-                    <div class="testSection_sub moveDown">
+                    <div class="testSection_sub">
                         <div class="testSection_subPicSection">
                             <div class="testSection_subPic">
                                 <i class="fa-solid fa-staff-snake"></i>
@@ -211,7 +225,7 @@
                             <div class="description">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
                         </div>
                     </div>
-                    <div class="testSection_sub moveDown">
+                    <div class="testSection_sub">
                         <div class="testSection_subPicSection">
                             <div class="testSection_subPic">
                                 <i class="fa-solid fa-handshake-angle"></i>
@@ -223,7 +237,7 @@
                             <div class="description">im Bereich Schmerzpsychologie und Wahrnehmung</div>
                         </div>
                     </div>
-                    <div class="testSection_sub moveDown">
+                    <div class="testSection_sub">
                         <div class="testSection_subPicSection">
                             <div class="testSection_subPic">
                                 <i class="fa-solid fa-dumbbell"></i>
