--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                 </div>
             </div>
         </section>
-        <div class="yPhysioWrapper">
-            <div class="yPhysioHeader moveDown">Wieso Physiotherapie?</div>
-            <div class="text moveDown">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
+        <div class="yPhysioWrapper opacityReveal">
+            <div class="yPhysioHeader">Wieso Physiotherapie?</div>
+            <div class="text">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
             <div class="yPhysioInner">
                 <div class="yPhysio">
                     <div class="headlineWrapper">
@@ -184,7 +184,7 @@
                 </div>
                 <div class="yPhysio">
                     <div class="headlineWrapper">
-                        <div class="headline">Verbesserung der<br>Mobilität</div>
+                        <div class="headline moveDown">Verbesserung der<br>Mobilität</div>
                     </div>
                     <div class="yPhysioContent">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     <div class="absoluteBox borderRevealWrapper">
@@ -196,7 +196,7 @@
                 </div>
                 <div class="yPhysio">
                     <div class="headlineWrapper">
-                        <div class="headline">Rehabilitation nach<br>Verletzungen</div>
+                        <div class="headline moveDown">Rehabilitation nach<br>Verletzungen</div>
                     </div>
                     <div class="yPhysioContent">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     <div class="absoluteBox borderRevealWrapper">
