--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             <div class="yPhysioHeader">Wieso Physiotherapie?</div>
             <div class="text">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
             <div class="yPhysioInner">
+
                 <div class="yPhysio">
                     <div class="headlineWrapper">
                         <div class="headline moveDown">Schmerzlinderung</div>
@@ -207,6 +208,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <section id="testSection">
@@ -406,7 +408,7 @@
                             <div class="footerLogo-textbox-2">Praxis Weber</div>
                         </div>
                         -->
-                        <img src="src/logoText.png" height="100%">
+                        <img src="src/logoReworked.png" height="100%">
                     </div>
                 </div>
             </div>
