--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -154,6 +154,90 @@
     </div>
 
     <div id="content">
+
+        <section>
+            <div class="physioHelps">
+                <h5>Physiotherapie in Bolanden</h5>
+                <div class="smallText">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
+                <div class="physioHelpsCards">
+                    <div class="physioHelpsCard">
+                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
+                        <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                    </div>
+                    <div class="physioHelpsCard">
+                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
+                        <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                    </div>
+                    <div class="physioHelpsCard">
+                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
+                        <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="secondSection">
+            <div class="secondSection-overlay moveDownRevealOverlay">
+                <!--<div class="aboutMeTextBox fromBottomWrapper">
+                    <h4>Über mich</h4>
+                    <h5>Heilpraktiker für<br>Physiotherapie</h5>
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
+                    <button type="button" class="cta-button">MEHR ERFAHREN</button>
+                </div> -->
+            </div>
+            <!-- <div class="firstSection-overlay"></div> -->
+            <div class="secondSection_inner">
+                <div class="aboutMeWrapper">
+                    <div class="aboutMeTextBox">
+                        <h4>Über mich</h4>
+                        <h5>Heilpraktiker für<br>Physiotherapie</h5>
+                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
+                        <button type="button" class="cta-button">MEHR ERFAHREN</button>
+                    </div>
+                    <div class="aboutMeImageBoxWrapper fromBottomWrapper">
+                        <div class="aboutMeImageBox">
+                            <div class="aboutMeImageBox-first imi"></div>
+                            <div class="aboutMeImageBox-second imi"></div>
+                        </div>
+                        <div class="aboutMeImageBox">
+                            <div class="aboutMeImageBox-third imi"></div>
+                            <div class="aboutMeImageBox-fourth imi"></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+        <section>
+            <div class="leistungen">
+                <h5>Unsere Leistungen</h5>
+                <div class="smallText">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
+            </div>
+
+            <div class="leistungenCards">
+                <div class="leistungenCard">
+                    <i class="fa-solid fa-staff-snake"></i>
+                    <h2>Vielseitige Therapieverfahren</h2>
+                    <div class="smallText">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
+                </div>
+                <div class="leistungenCard leistungenCardC">
+                    <i class="fa-solid fa-handshake-angle"></i>
+                    <h2>Effektives Coaching</h2>
+                    <div class="smallText">im Bereich Schmerzpsychologie und Wahrnehmung</div>
+                </div>
+                <div class="leistungenCard">
+                    <i class="fa-solid fa-dumbbell"></i>
+                    <h2>Professionnelle Fitnessberatung</h2>
+                    <div class="smallText">• Erstellung von Fitnessplänen<br>
+                        • gemeinsames Training<br>
+                        • Personal Training</div>
+                </div>
+            </div>
+        </section>
+
+
+
         <section id="firstSection">
             <div class="firstSection-overlay"></div>
             <div class="firstSection_inner">
@@ -211,7 +295,7 @@
 
         </div>
 
-        <section id="testSection">
+        <!--<section id="testSection">
             <div class="testSection_inner">
                 <h5>Unsere Leistungen</h5>
                 <div class="testSection_subWrapper">
@@ -256,39 +340,7 @@
                 </div>
             </div>
         </section>
-        <section id="secondSection">
-            <div class="secondSection-overlay moveDownRevealOverlay">
-                <!--<div class="aboutMeTextBox fromBottomWrapper">
-                    <h4>Über mich</h4>
-                    <h5>Heilpraktiker für<br>Physiotherapie</h5>
-                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
-                    <button type="button" class="cta-button">MEHR ERFAHREN</button>
-                </div> -->
-            </div>
-            <!-- <div class="firstSection-overlay"></div> -->
-            <div class="secondSection_inner">
-                <div class="aboutMeWrapper">
-                    <div class="aboutMeTextBox">
-                        <h4>Über mich</h4>
-                        <h5>Heilpraktiker für<br>Physiotherapie</h5>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
-                        <button type="button" class="cta-button">MEHR ERFAHREN</button>
-                    </div>
-                    <div class="aboutMeImageBoxWrapper fromBottomWrapper">
-                        <div class="aboutMeImageBox">
-                            <div class="aboutMeImageBox-first imi"></div>
-                            <div class="aboutMeImageBox-second imi"></div>
-                        </div>
-                        <div class="aboutMeImageBox">
-                            <div class="aboutMeImageBox-third imi"></div>
-                            <div class="aboutMeImageBox-fourth imi"></div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
+-->
 
         <section id="thirdSection">
             <div class="thirdSection_inner">
@@ -377,6 +429,7 @@
         </section> -->
 
         <section id="footer">
+            <div class="footerAbsoluteBG"></div>
             <div class="footer_inner">
                 <div class="footerBox">
                     <div class="footerHeadline">Kontakt</div>
